# godel-py

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLI.md  CODE_OF_CONDUCT.md  CODE_REVIEW.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/: BEADS.md  CLI.md  HANDOFF.md  MONITORING.md  TRIAGE.md
.beads/: metadata.json
.github/workflows/: claude-code-review.yml  pr.yml  publish.yml
.obsidian/: workspace.json
audits/: 2026-05-01-06be6db.md
benchmarks/: README.md  observability.py
benchmarks/results/: 2026-04-14-26bfcc7-023912-c296.json  2026-04-14-2bd437b.json
docs/: README.md  api-reference.md  best-practices.md  cli.md  concepts.md  examples.md  index.md  redaction.md  stdout-capture.md  transcript-format.md  why-godel.md
docs/proposals/: web-gui.md
docs/skills/: README.md
docs/strategy/: README.md  boltdeck-vision.md  business-model.md  positioning.md  roadmap-vision.md
e2e_tests/: context_overflow_test.py  parallel_max_concurrency.py  rewind_idempotent_demo.py  test_rewind_idempotent.sh
examples/: README.md  codebase_audit.py  content_pipeline.py  count_8.py  data_quality.py  feature_factory.py  feature_factory_dryrun.py  haiku_chat.py  haiku_chat_copilot.py  incident_response.py  parallel_agents.py  pr_review.py  research_chat.py  research_chat_copilot.py  test_rewind_idempotent.sh
godel/: __init__.py  __main__.py  _config.py  _context.py  _dag_render.py  _decorators.py  _event_log.py  _events.py  _exceptions.py  _formatters.py  _linter.py  _pause.py  _redact.py  _replay.py  _rewind.py  _run.py  _run_summary.py  _stdout_capture.py  _strict_ast.py  _strict_audit.py  _strict_imports.py  _tail.py  _transcript.py  _watch.py  _watch_model.py  cli.py  det.py  io.py  testing.py
godel/_guides/: __init__.py  api-reference.md  best-practices.md  cli.md  concepts.md  engineer.md  getting-started.md  monitoring.md  runner.md
godel/agents/: __init__.py  _adapters.py  _claude.py  _common.py  _copilot.py  _stream_parser.py
godel/intervention/: __init__.py  _context.py  _tools.py  default_agent.py
godel/utils/: helpers.py
plans/: live-observability-v3.md
scripts/: sync_guides.sh
tests/: test_agent_adapters.py  test_agent_context_overflow.py  test_agent_events.py  test_agent_streaming.py  test_agents.py  test_audit_log_errors.py  test_auto_checkpoint.py  test_cli.py  test_cli_args.py  test_cli_lint.py  test_cli_pause.py  test_cli_pause_resume.py  test_cli_resume.py  test_cli_rewind.py  test_cli_run_lint.py  test_cli_runs_list.py  test_cli_show.py  test_cli_strict.py  test_cli_tail.py  test_cli_watch.py  test_config.py  test_copilot_agent.py  test_dag_render.py  test_decorator_options.py  test_decorators.py  test_default_intervention_agent.py  test_det.py  test_event_log.py  test_events.py  test_exceptions.py  test_exports.py  test_exports_strict.py  test_file_io.py  test_formatters.py  test_graph_cut.py  test_guide.py  test_hash_mismatch.py  test_idempotency.py  test_integration_audit.py  test_integration_resume.py  (+55 more)
tests/__snapshots__/: test_watch_render.ambr
tests/fixtures/: events_old_format.jsonl  failing_workflow.py  good_workflow.py  mock_intervention.py  parallel_rewind_wf.py  pause_edit_wf.py  repair_schema_typo_wf.py
tests/fixtures/event_streams/: simple_workflow.jsonl  with_rotation.jsonl
tests/fixtures/stream_json/: claude_sample.jsonl  copilot_sample.jsonl  crlf_sample.jsonl
