[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "godel-py"
version = "3.15.0"
description = "Deterministic orchestrator for AI agent workflows"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSL-1.1" }
authors = [{ name = "Abraham Toledo", email = "godel@abrahamtoledo.dev" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = ["ai", "agents", "orchestration", "workflow", "deterministic", "replay"]
dependencies = [
    "pydantic>=2",
    "click",
    "python-ulid",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "build", "python-semantic-release", "syrupy>=4.0"]
watch = ["rich>=13.0,<15"]

[project.scripts]
godel = "godel.cli:main"

[project.urls]
Homepage = "https://github.com/atscub/godel-py"
Repository = "https://github.com/atscub/godel-py"
Documentation = "https://github.com/atscub/godel-py/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["godel"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["godel/__init__.py:__version__"]
branch = "main"
build_command = "python -m build"
upload_to_vcs_release = true
upload_to_pypi = false  # handled by GitHub Actions trusted publisher
commit_message = "chore(release): {version} [skip ci]"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "chore", "build", "ci", "test", "style"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
